--- a/src/main/resources/templates/uczen_lista.html
+++ b/src/main/resources/templates/uczen_lista.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <title>Lista uczniów</title>
+      <title>Lista uczniów</title>
   </head>
   <body>
       <div class="container">
@@ -26,11 +26,33 @@
                   <h2>Lista uczniów wg klas</h2>
                   <div class="form-group">
                       <label for="classesList">Wybierz klasę</label>
-                      <select class="form-control" id="classesList">
+                      <form action="/classes" method="GET">
+                      <select name="classNumber" class="form-control" id="classesList" onchange="this.form.submit()">
+                          <option value="0">---</option>
                           <option th:each="schoolclass : ${schoolclasses}"
                                   th:value="${schoolclass.classID}"
-                                  th:utext="|${schoolclass.classNumber} ${schoolclass.className}|"/>
+                                  th:utext="|${schoolclass.classNumber} ${schoolclass.className}|"
+                                  th:selected="${schoolclass.classID}==${selectedClassID}"/>
                       </select>
+                      </form>
+                  </div>
+                  <div th:if="${students != null}">
+                      <table class="table">
+                          <thead class="thead-primary">
+                          <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">Imię</th>
+                              <th scope="col">Nazwisko</th>
+                              <th scope="col">Data urodzenia</th>
+                          </tr>
+                          <tr th:each="student : ${students}">
+                              <td th:utext="${student.ID}"/>
+                              <td th:utext="${student.name}"/>
+                              <td th:utext="${student.surname}"/>
+                              <td th:utext="${student.bornDate}"/>
+                          </tr>
+                          </thead>
+                      </table>
                   </div>
               </div>
           </div>
