--- a/src/main/resources/templates/classes_list.html
+++ b/src/main/resources/templates/classes_list.html
@@ -49,7 +49,7 @@
                 </table>
                 <div class="d-flex flex-row-reverse">
                     <div class="p-2"><button formaction="/classes" type="submit" name="del" class="btn btn-danger">Usuń</button></div>
-                    <div class="p-2"><button type="button" class="btn btn-secondary">Zmień</button></div>
+                    <div class="p-2"><button formaction="/classes/change" type="submit" class="btn btn-secondary">Zmień</button></div>
                     <div class="p-2"><a href="/classes/add"><button type="button" class="btn btn-primary">Dodaj</button></a></div>
                 </div>
             </form>
