--- a/src/main/resources/templates/classes_add.html
+++ b/src/main/resources/templates/classes_add.html
@@ -23,15 +23,16 @@
             </ul>
         </div>
         <div class="col-md-9">
-            <h2>Dodaj klasę</h2>
-            <form action="/classes/add" method="get">
+            <h2 th:if="${schoolclass == null}">Dodaj klasę</h2>
+            <h2 th:if="${schoolclass != null}">Edytuj klasę</h2>
+            <form method="get">
                 <div class="form-group">
                     <label for="className">Nazwa klasy</label>
-                    <input name="className" required type="text" class="form-control" id="className" placeholder="Wprowadź nazwę klasy">
+                    <input th:value="${schoolclass != null} ? ${schoolclass.className}" name="className" required type="text" class="form-control" id="className" placeholder="Wprowadź nazwę klasy">
                 </div>
                 <div class="form-group">
                     <label for="classNumber">Numer klasy</label>
-                    <input name="classNumber" required type="number" class="form-control" id="classNumber" placeholder="Wprowadź numer klasy">
+                    <input th:value="${schoolclass != null} ? ${schoolclass.classNumber}" name="classNumber" required type="number" class="form-control" id="classNumber" placeholder="Wprowadź numer klasy">
                 </div>
                 <div class="form-group">
                     <label for="educatorID">Wychowawca</label>
@@ -39,7 +40,8 @@
 
                     </select>
                     <div class="d-flex flex-row-reverse">
-                        <div class="p-2"><button type="submit" name="add" class="btn btn-primary">Dodaj</button></div>
+                        <div th:if="${schoolclass == null}" class="p-2"><button type="submit" formaction="/classes/add" name="add" class="btn btn-primary">Dodaj</button></div>
+                        <div th:if="${schoolclass != null}" class="p-2"><button th:value=${selected} type="submit" formaction="/classes/change" name="change" class="btn btn-primary">Zmień</button></div>
                     </div>
                 </div>
             </form>
